@@ -6,8 +6,6 @@ class Post < ActiveRecord::Base
   belongs_to :filter
   belongs_to :location
 
-  has_many :post_counters
-
   has_many :posts_tags, dependent: :destroy
   has_many :tags, through: :posts_tags
 
@@ -19,10 +17,6 @@ class Post < ActiveRecord::Base
   before_validation(on: :create) { |t| t.created_time ||= Time.now.to_i }
   before_validation { |t| t.updated_time = Time.now.to_i }
 
-  def last_post_counter
-    post_counters.order(:created_time).last
-  end
-
   def export_data
     data_sources = [self, user, geo_point, location, filter]
     data_sources.each_with_object({}) do |data_source, export_hash|
@@ -33,20 +27,14 @@ class Post < ActiveRecord::Base
 
   include Exportable # add :export_attrs method
   add_export prefix: 'post',
-             export_fields: %i[ id instagram_id created_time content_type caption ],
+             export_fields: %i[ id instagram_id created_time content_type caption likes_count comments_count ],
              extra_fields: :extra_export
 
   def extra_export
-    attrs = {}
-    attrs['tags'] = tags.pluck(:name)
-    attrs['tags_count'] = attrs['tags'].count
-    attrs['tagged_users_count'] = tagged_users.count
-
-    post_counter = last_post_counter
-    attrs['likes_count']    = post_counter.likes_count
-    attrs['comments_count'] = post_counter.comments_count
-
-    attrs
+    {
+      'tags'               => tags.pluck(:name),
+      'tags_count'         => tags.count,
+      'tagged_users_count' => tagged_users.count
+    }
   end
-
 end
