@@ -1,3 +1,0 @@
-class PostCounter < ActiveRecord::Base
-  belongs_to :post
-end
